# bsc-semantic-demo

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  test.py
.claude/plans/: bright-brewing-pearl.md  so-a-colleague-of-wiggly-cherny.md
.streamlit/: secrets.toml.example
api/schemas/: explain.py  search.py
api/services/: cortex_service.py  dbt_mcp_service.py  explain_service.py  fuzzy_service.py  semantic_service.py
app/: Dockerfile  app.py  async_utils.py  config.py  conftest.py  environment.yml  requirements.txt  streamlit_app.py  utils.py
app/agent/: config.py  secrets.py  session.py  types.py
app/agent/context/: builder.py  catalog.py  glossary.py
app/agent/cortex/: client.py  json_repair.py
app/agents/: __init__.py  cortex.py  orchestrator.py
app/feedback/: __init__.py  collector.py  evaluator.py  schema.sql
app/guardrails/: __init__.py  validator.py
app/pages/: 01_chat.py  02_traces.py  03_eval.py
app/semantic/: __init__.py  catalog.py  executor.py
app/skills/: __init__.py  base.py  builtin.py  registry.py
app/tests/: test_fuzzy.py  test_json_repair.py  test_slot_validators.py  test_sql_guard.py  test_types.py
app/ui/: __init__.py  chat.py  results.py  sidebar.py
infra/: setup.sh  teardown.sh
infra/spec/: streamlit_service.yaml
infra/sql/: 01_database_schema.sql  02_warehouse.sql  03_tables.sql  04_secrets_eai.sql  05_compute_pool.sql  06_image_repo.sql  07_seed_glossary.sql  08_seed_golden.sql  09_stored_procs.sql  10_tasks.sql  11_service.sql
scripts/: deploy.sh
ui/: app.py
ui/components/: sql_panel.py
(+17 files in other folders)
