[project]
name = "bsc-semantic-demo"
version = "0.1.0"
description = "BSci Semantic Layer Streamlit demo — natural language analytics on Snowflake"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "dbt-sl-sdk[async]>=0.13.0",
    "snowflake-connector-python[pandas]>=3.6.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "python-dateutil>=2.9.0",
]

[tool.uv.sources]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
